cmake_minimum_required(VERSION 2.8)
project(yanf)

set(YANF_VERSION_MAJOR 0)
set(YANF_VERSION_MINOR 0)
set(YANF_VERSION_PATCH 1)
set(YANF_VERSION ${YANF_VERSION_MAJOR}.${YANF_VERSION_MINOR}.${YANF_VERSION_PATCH})

set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -DYANF_DEBUG")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall")

set(SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/yanf.c)
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -D_FILE_OFFSET_BITS=64")
add_executable(yanf ${CMAKE_CURRENT_SOURCE_DIR}/yanf.c)
target_link_libraries(yanf lightnvm fuse)
install(TARGETS yanf DESTINATION bin)

set(CPACK_GENERATOR "DEB" "TGZ")
set(CPACK_DEBIAN_PACKAGE_MAINTAINER "Simon A. F.Lund")
set(CPACK_PACKAGE_VERSION_MAJOR ${YANF_VERSION_MAJOR})
set(CPACK_PACKAGE_VERSION_MINOR ${YANF_VERSION_MINOR})
set(CPACK_PACKAGE_VERSION_PATCH ${YANF_VERSION_PATCH})
set(CPACK_PACKAGE_DESCRIPTION_SUMMARY
	"Yet another Non-volatile memory Filesystem")
include(CPack)
